# CanisNoise

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
application/: CMakeLists.txt  main.cpp
application/include/: EditorScene.hpp  Image.hpp  PlatformWindow.hpp  RenderingContext.hpp  ResourceTypes.hpp
application/include/nodegraph/: CompiledShaders.hpp  NodeTypes.hpp  psoCache.hpp
application/src/: EditorScene.cpp  ImGuiWrapper.cpp  Image.cpp  RenderingContext.cpp  ResourceContext.cpp
application/src/impl/: ResourceContextImpl.cpp  ResourceContextImpl.hpp  TransferSystem.cpp  UploadBuffer.cpp
application/src/nodegraph/: psoCache.cpp
backend/: CMakeLists.txt
backend/include/: CommonDef.hpp
backend/shaders/: modifiers.comp
backend/shaders/combiners/: blend.comp  divide.comp  max.comp  min.comp  multiply.comp  power.comp  select.comp  subtract.comp
backend/shaders/generators/: Billow3D.comp  Decarpientier2D.comp  Decarpientier3D.comp  FBM3D.comp  Jordan2D.comp  Ridged3D.comp
backend/shaders/modifiers/: abs.comp  clamp.comp  curve.comp  downsample.comp  scalebias.comp  terrace.comp
backends/cpu/: CMakeLists.txt  cpu_include.hpp  noisegen.cpp  simplex_lut.cpp  vector_types.hpp
backends/cpu/combiners/: add.cpp  add.hpp  blend.cpp  blend.hpp  divide.cpp  divide.hpp  max.cpp  max.hpp  min.cpp  min.hpp  minus.cpp  minus.hpp  multiply.cpp  multiply.hpp  power.cpp  power.hpp  select.cpp  select.hpp
backends/cpu/generators/: Billow.cpp  Billow.hpp  DecarpientierSwiss.cpp  DecarpientierSwiss.hpp  FBM.cpp  FBM.hpp  RidgedMulti.cpp  RidgedMulti.hpp  decarpientier_swiss.cpp  decarpientier_swiss.hpp  ridged_multi.cpp
backends/cpu/modifiers/: abs.cpp  abs.hpp  clamp.cpp  clamp.hpp  curve.cpp  curve.hpp  scalebias.cpp  scalebias.hpp  terrace.cpp  terrace.hpp  turbulence.cpp  turbulence.hpp
backends/cuda/: CMakeLists.txt  CUDA_Include.cuh  cuda_assert.h  cutil_math.cuh  noise_generators.cu  noise_generators.cuh  simplex_lut.cuh
backends/cuda/combiners/: add.cu  add.cuh  blend.cu  blend.cuh  divide.cu  divide.cuh  max.cu  max.cuh  min.cu  min.cuh  minus.cu  minus.cuh  multiply.cu  power.cu  power.cuh  select.cu  select.cuh
backends/cuda/generators/: FBM.cu  FBM.cuh  billow.cu  billow.cuh  decarpientier_swiss.cu  decarpientier_swiss.cuh  jordan.cu  jordan.cuh  ridged_multi.cu  ridged_multi.cuh  voronoi.cu  voronoi.cuh
backends/cuda/modifiers/: Turbulence.cu  Turbulence.cuh  abs.cu  abs.cuh  clamp.cu  clamp.cuh  curve.cu  curve.cuh  multiply.cu  multiply.cuh  scalebias.cu  scalebias.cuh  terrace.cu  terrace.cuh
backends/cuda/utility/: checkerboard.cu  checkerboard.cuh  normalize.cu  normalize.cuh
common/: CN_API.hpp  CUDA_Include.h  CommonDef.hpp  CommonInclude.h  CommonStructs.hpp  Constants.h
cpp/image/: Image.cpp
cpp/modules/: Base.cpp  Base.h  Modules.h
cpp/modules/combiners/: Power.cpp
cpp/modules/generators/: Billow.h  DecarpientierSwiss.cpp  FBM.cpp  RidgedMulti.cpp
cpp/modules/modifiers/: Abs.h  Clamp.cpp  ScaleBias.cpp  ScaleBias.h  Terrace.h  Turbulence.h
cpp/modules/utility/: Cache.cpp  Cache.h  Normalize.cpp
cpu/: CMakeLists.txt
cpu/include/: cpu_include.hpp  noisegen.hpp  simplex_lut.hpp  std_includes.hpp
cpu/include/combiners/: add.hpp  blend.hpp  divide.hpp  max.hpp  min.hpp  minus.hpp  multiply.hpp  power.hpp  select.hpp
cpu/include/generators/: Billow.hpp  FBM.hpp  decarpientier_swiss.hpp  ridged_multi.hpp
cpu/include/modifiers/: abs.hpp  clamp.hpp  curve.hpp  scalebias.hpp  terrace.hpp  turbulence.hpp
cpu/src/combiners/: add.cpp  blend.cpp  divide.cpp  max.cpp  min.cpp  minus.cpp  multiply.cpp  power.cpp  select.cpp
cpu/src/generators/: Billow.cpp  FBM.cpp  decarpientier_swiss.cpp  ridged_multi.cpp
cpu/src/modifiers/: abs.cpp  clamp.cpp  curve.cpp  scalebias.cpp  terrace.cpp  turbulence.cpp
cuda/: CMakeLists.txt
cuda/include/: CUDA_Include.cuh  noise_generators.cuh  simplex_lut.cuh
cuda/include/combiners/: add.cuh  blend.cuh  divide.cuh  max.cuh  min.cuh  minus.cuh  multiply.cuh  power.cuh  select.cuh
cuda/include/generators/: FBM.cuh  billow.cuh  decarpientier_swiss.cuh  ridged_multi.cuh  voronoi.cuh
cuda/include/modifiers/: Turbulence.cuh  abs.cuh  clamp.cuh  curve.cuh  scalebias.cuh  terrace.cuh
cuda/include/utility/: normalize.cuh
cuda/src/: noise_generators.cu
cuda/src/combiners/: add.cu  blend.cu  divide.cu  max.cu  min.cu  minus.cu  multiply.cu  power.cu  select.cu
cuda/src/generators/: FBM.cu  billow.cu  decarpientier_swiss.cu  ridged_multi.cu  voronoi.cu
cuda/src/modifiers/: Turbulence.cu  abs.cu  clamp.cu  curve.cu  scalebias.cu  terrace.cu
cuda/src/utility/: checkerboard.cu
frontend/: CMakeLists.txt  main.cpp
frontend/image/: Image.cpp  Image.hpp
frontend/interface/: NoiseScene.hpp  NoiseSurface.hpp
frontend/interface/nodegraph/: nodegraph.cpp  nodegraph.hpp
frontend/modules/: Base.cpp  Base.hpp
frontend/modules/combiners/: Add.cpp  Add.hpp  Blend.cpp  Blend.hpp  Max.cpp  Max.hpp  Min.cpp  Min.hpp  Power.cpp  Power.hpp  Select.cpp  Select.hpp
frontend/modules/generators/: Billow.cpp  Billow.hpp  DecarpientierSwiss.cpp  DecarpientierSwiss.hpp  FBM.cpp  FBM.hpp  RidgedMulti.cpp  RidgedMulti.hpp  Voronoi.cpp  Voronoi.hpp
frontend/modules/modifiers/: Abs.cpp  Abs.hpp  Clamp.cpp  Clamp.hpp  Curve.cpp  Curve.hpp  ScaleBias.cpp  ScaleBias.hpp  Terrace.cpp  Terrace.hpp  Turbulence.cpp  Turbulence.hpp
frontend/modules/utility/: Cache.cpp  Cache.hpp  Checkerboard.cpp  Checkerboard.hpp  Constant.cpp  Constant.hpp  Normalize.cpp  Normalize.hpp
shaders/: combiners.comp  combiners.spv  modifiers.comp  modifiers.spv
vulkan/: CMakeLists.txt
vulkan/include/: Sample.hpp
vulkan/shaders/combiners/: add.comp  max.comp  min.comp  select.comp  subtract.comp
vulkan/shaders/modifiers/: terrace.comp
