CMAKE_MINIMUM_REQUIRED(VERSION 3.7 FATAL_ERROR)
PROJECT(CANIS_CUDA_BACKEND)

FILE(GLOB COMBINERS "${CMAKE_CURRENT_SOURCE_DIR}/include/combiners/*.cuh" "${CMAKE_CURRENT_SOURCE_DIR}/src/combiners/*.cu")
FILE(GLOB GENERATORS "${CMAKE_CURRENT_SOURCE_DIR}/include/generators/*.cuh" "${CMAKE_CURRENT_SOURCE_DIR}/src/generators/*.cu")
FILE(GLOB MODIFIERS "${CMAKE_CURRENT_SOURCE_DIR}/include/modifiers/*.cuh" "${CMAKE_CURRENT_SOURCE_DIR}/src/modifiers/*.cu")
FILE(GLOB UTILITY "${CMAKE_CURRENT_SOURCE_DIR}/include/utility/*.cuh" "${CMAKE_CURRENT_SOURCE_DIR}/src/utility/*.cu")
FILE(GLOB COMMON_GENERATORS "${CMAKE_CURRENT_SOURCE_DIR}/include/noise_generators.cuh" "${CMAKE_CURRENT_SOURCE_DIR}/src/noise_generators.cu")
FILE(GLOB COMMON_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/CUDA_Include.cuh" "${CMAKE_CURRENT_SOURCE_DIR}/include/cutil_math.cuh" 
                         "${CMAKE_CURRENT_SOURCE_DIR}/include/cuda_assert.h" "${CMAKE_CURRENT_SOURCE_DIR}/include/simplex_lut.cuh")

SOURCE_GROUP("combiners" FILES ${COMBINERS}) 
SOURCE_GROUP("modifiers" FILES ${MODIFIERS})
SOURCE_GROUP("generators" FILES ${GENERATORS})
SOURCE_GROUP("utility" FILES ${UTILITY})

FIND_PACKAGE(CUDA REQUIRED)

CUDA_ADD_LIBRARY(CANIS_CUDA_BACKEND ${COMBINERS} ${MODIFIERS} ${GENERATORS} ${COMMON_GENERATORS} ${COMMON_HEADERS} SHARED)
TARGET_COMPILE_DEFINITIONS(CANIS_CUDA_BACKEND PRIVATE "-DBUILDING_DLL")
TARGET_INCLUDE_DIRECTORIES(CANIS_CUDA_BACKEND PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include")
TARGET_INCLUDE_DIRECTORIES(CANIS_CUDA_BACKEND PRIVATE "../common")
SET_TARGET_PROPERTIES(CANIS_CUDA_BACKEND PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
TARGET_COMPILE_FEATURES(CANIS_CUDA_BACKEND PUBLIC cxx_std_11)
SET_TARGET_PROPERTIES(CANIS_CUDA_BACKEND PROPERTIES POSITION_INDEPENDENT_CODE ON)

INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/" DESTINATION "include/cuda/")
INSTALL(TARGETS CANIS_CUDA_BACKEND
    LIBRARY DESTINATION "lib"
    ARCHIVE DESTINATION "lib"
    RUNTIME DESTINATION "bin")