CMAKE_MINIMUM_REQUIRED(VERSION 3.8 FATAL_ERROR)
PROJECT(CANIS_CUDA_BACKEND LANGUAGES CXX CUDA)

FILE(GLOB COMBINERS "${CMAKE_CURRENT_SOURCE_DIR}/combiners/*.cuh" "${CMAKE_CURRENT_SOURCE_DIR}/combiners/*.cu")
FILE(GLOB GENERATORS "${CMAKE_CURRENT_SOURCE_DIR}/generators/*.cuh" "${CMAKE_CURRENT_SOURCE_DIR}/generators/*.cu")
FILE(GLOB MODIFIERS "${CMAKE_CURRENT_SOURCE_DIR}/modifiers/*.cuh" "${CMAKE_CURRENT_SOURCE_DIR}/modifiers/*.cu")
FILE(GLOB UTILITY "${CMAKE_CURRENT_SOURCE_DIR}/utility/*.cuh" "${CMAKE_CURRENT_SOURCE_DIR}/utility/*.cu")
FILE(GLOB COMMON_GENERATORS "${CMAKE_CURRENT_SOURCE_DIR}/noise_generators.cuh" "${CMAKE_CURRENT_SOURCE_DIR}/noise_generators.cu")
FILE(GLOB COMMON_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/CUDA_Include.cuh" "${CMAKE_CURRENT_SOURCE_DIR}/cutil_math.cuh" 
                         "${CMAKE_CURRENT_SOURCE_DIR}/cuda_assert.h" "${CMAKE_CURRENT_SOURCE_DIR}/simplex_lut.cuh")

SOURCE_GROUP("combiners" FILES ${COMBINERS}) 
SOURCE_GROUP("modifiers" FILES ${MODIFIERS})
SOURCE_GROUP("generators" FILES ${GENERATORS})
SOURCE_GROUP("utility" FILES ${UTILITY})

FIND_PACKAGE(CUDA REQUIRED)

ADD_LIBRARY(CANIS_CUDA_BACKEND SHARED ${COMBINERS} ${MODIFIERS} ${GENERATORS} ${COMMON_GENERATORS} ${COMMON_HEADERS})
TARGET_INCLUDE_DIRECTORIES(CANIS_CUDA_BACKEND PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
TARGET_INCLUDE_DIRECTORIES(CANIS_CUDA_BACKEND PRIVATE "../../common")
TARGET_COMPILE_DEFINITIONS(CANIS_CUDA_BACKEND PRIVATE -DBUILDING_DLL)
TARGET_COMPILE_DEFINITIONS(CANIS_CUDA_BACKEND PRIVATE -DCMAKE_CUDA_FLAGS="-arch=sm_30")
SET_TARGET_PROPERTIES(CANIS_CUDA_BACKEND PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
TARGET_COMPILE_FEATURES(CANIS_CUDA_BACKEND PUBLIC cxx_std_11)
SET_TARGET_PROPERTIES(CANIS_CUDA_BACKEND PROPERTIES POSITION_INDEPENDENT_CODE ON)


INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/combiners" DESTINATION "include/cuda_backend/")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/modifiers" DESTINATION "include/cuda_backend/")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/generators" DESTINATION "include/cuda_backend/")
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/utility" DESTINATION "include/cuda_backend/")
INSTALL(FILES ${COMMON_GENERATORS} ${COMMON_HEADERS} DESTINATION "include/cuda_backend/")
INSTALL(TARGETS CANIS_CUDA_BACKEND
    LIBRARY DESTINATION "lib"
    ARCHIVE DESTINATION "lib"
    RUNTIME DESTINATION "bin"
    COMPONENT library)